--- a/Baker-Grillers-Group-Project-Part-I/Properties/Resources.resx
+++ b/Baker-Grillers-Group-Project-Part-I/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="OpenEye" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OpenEye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CSGOLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CSGOLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
